<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pasteltri"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.neham.to_read.MainActivity">

    <TextView
        android:id="@+id/AppTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5pt"
        android:textSize="25pt"
        android:text="@string/app_title"
        android:textColor="@color/fontcolor"
        android:textAlignment="center" />

    <ListView
        android:id="@+id/mList"
        style="@style/Widget.AppCompat.ListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/AppTitle"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:layout_above="@+id/addBookButton" />

    <Button
        android:id="@+id/addBookButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="addBook"
        android:background="@color/Transparent"
        android:text="@string/add_book_button" />

    <Button
        android:id="@+id/exportDbButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="exportDb"
        android:background="@color/Transparent"
        android:text="@string/export_db_button" />
</RelativeLayout>
