<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_book"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/whitepastelbg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.neham.to_read.AddBook">

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/delete_button"
        android:layout_centerHorizontal="true"
        android:hint="@string/book_title"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        android:textColor="@color/fontcolor2"
        android:textColorHint="@color/fontcolorhint"
        />

    <EditText
        android:id="@+id/editTextAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTitle"
        android:layout_centerHorizontal="true"
        android:hint="@string/book_author"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        android:textColor="@color/fontcolor2"
        android:textColorHint="@color/fontcolorhint"
        />

    <EditText
        android:id="@+id/editTextDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextAuth"
        android:layout_centerHorizontal="true"
        android:hint="@string/book_desc"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        android:textColor="@color/fontcolor2"
        android:textColorHint="@color/fontcolorhint"

        />

    <ImageButton
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/Transparent"
        android:onClick="deleteButtonClicked"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:tint="@color/iconTint" />
</RelativeLayout>
